test/e2e/testdata/httproute-to-backend-fqdn-http2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-to-backend-fqdn-http2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend-fqdn-http2
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-fqdn-http2
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-fqdn-http2
  namespace: gateway-conformance-infra
spec:
  appProtocols:
    - gateway.envoyproxy.io/h2c
  endpoints:
    - fqdn:
        hostname: infra-backend-v1.gateway-conformance-infra.svc.cluster.local
        port: 8081
